# d-back

./: .bump-my-version.cfg  .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  build_and_install.ps1  crowdin.yml  dev  mkdocs.yml  pyproject.toml  requirements.txt  run_tests_simple.py  setup.cfg  test-requirements.txt  tox.ini  vercel.json  versions.json
.github/: SECURITY.md
.github/workflows/: bump-version.yml  crowdin.yml  deploy.yml  docs.yml  publish.yml  test.yml
0.0.16/: 404.html  index.html  sitemap.xml
0.0.16/TESTING_I18N/: index.html
0.0.16/VERCEL_SETUP/: index.html
0.0.16/api-reference/: index.html
0.0.16/de/: index.html
0.0.16/de/TESTING_I18N/: index.html
0.0.16/de/VERCEL_SETUP/: index.html
0.0.16/de/api-reference/: index.html
0.0.16/de/developer-guide/: index.html
0.0.16/de/getting-started/: index.html
0.0.16/de/user-guide/: index.html
0.0.16/developer-guide/: index.html
0.0.16/es/: index.html
0.0.16/getting-started/: index.html
0.0.16/user-guide/: index.html
0.0.17/: 404.html  index.html  sitemap.xml
0.0.17/TESTING_I18N/: index.html
0.0.17/VERCEL_SETUP/: index.html
0.0.17/api-reference/: index.html
0.0.17/de/: index.html
0.0.17/developer-guide/: index.html
0.0.17/es/: index.html
0.0.17/getting-started/: index.html
0.0.17/user-guide/: index.html
0.0.18/: 404.html  index.html  sitemap.xml
0.0.18/TESTING_I18N/: index.html
0.0.18/VERCEL_SETUP/: index.html
0.0.18/api-reference/: index.html
0.0.18/de/: index.html
0.0.18/developer-guide/: index.html
0.0.18/es/: index.html
0.0.18/getting-started/: index.html
0.0.18/user-guide/: index.html
22968d5/: 404.html  index.html  objects.inv  sitemap.xml
22968d5/TESTING_I18N/: index.html
22968d5/VERCEL_SETUP/: index.html
22968d5/api-reference/: index.html
22968d5/de/: index.html
22968d5/developer-guide/: index.html
22968d5/es/: index.html
22968d5/getting-started/: index.html
22968d5/search/: search_index.json
22968d5/user-guide/: index.html
d_back/: __init__.py  __main__.py  server.py
d_back/mock/: __init__.py  data.py
development/: 404.html  index.html  sitemap.xml
development/TESTING_I18N/: index.html
development/VERCEL_SETUP/: index.html
development/api-reference/: index.html
development/de/: index.html
development/developer-guide/: index.html
development/es/: index.html
development/getting-started/: index.html
development/search/: search_index.json
development/user-guide/: index.html
docs/: .pages  TESTING_I18N.md  VERCEL_SETUP.md  api-reference.de.md  api-reference.es.md  api-reference.md  developer-guide.de.md  developer-guide.es.md  developer-guide.md  getting-started.de.md  getting-started.es.md  getting-started.md  index.de.md  index.es.md  index.md  user-guide.md
docs/user-guide/: callbacks.de.md  callbacks.es.md  callbacks.md  configuration.de.md  configuration.es.md  configuration.md  custom-data-providers.de.md  custom-data-providers.es.md  custom-data-providers.md  index.de.md  index.es.md  index.md
edge/: 404.html  index.html  sitemap.xml
edge/TESTING_I18N/: index.html
edge/VERCEL_SETUP/: index.html
edge/api-reference/: index.html
edge/de/: index.html
edge/developer-guide/: index.html
edge/es/: index.html
edge/getting-started/: index.html
edge/search/: search_index.json
edge/user-guide/: index.html
tests/: README.md  test_allure_enhanced.py  test_browser_integration.py  test_http_server.py  test_installation.py  test_server.py  test_websocket_server.py
tests/helpers/: mock_websocket_client.py
(+120 files in other folders)
