[project]
name = "d_back"
description = "WebSocket server project."
authors = [
    { name = "Tin Nguyen", email = "nguyen.ngoctindaniel@gmail.com" }
]
readme = "README.md"
dynamic = ["version", "requires-python", "dependencies", "optional-dependencies"]


[project.scripts]
d_back = "d_back.server:main_sync"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"