[project]
name = "d_back"
description = "WebSocket server project."
authors = [
    { name = "Tin Nguyen", email = "nguyen.ngoctindaniel@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "websockets>=10.0,<16.0; python_version>='3.10'",
    "websockets>=10.0,<14.0; python_version<'3.10'"
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-static-i18n>=1.2.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocstrings-python>=1.8.0",
    "pymdown-extensions>=10.7",
    "mike>=2.0.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "aiohttp>=3.8.0",
    "packaging>=21.0",
    "allure-pytest>=2.12.0",
    "selenium>=4.0.0",
    "webdriver-manager>=3.8.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0"
]
dev = [
    "black>=22.0.0",
    "build>=0.8.0",
    "d_back @ file://./?subdirectory=d_back&extras=test"
]

[dependency-groups]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-static-i18n>=1.2.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocstrings-python>=1.8.0",
    "pymdown-extensions>=10.7",
    "mike>=2.0.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "aiohttp>=3.8.0",
    "packaging>=21.0",
    "allure-pytest>=2.12.0",
    "selenium>=4.0.0",
    "webdriver-manager>=3.8.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0"
]
dev = [
    "black>=22.0.0",
    "build>=0.8.0",
    "d_back @ file://./?subdirectory=d_back&extras=test"
]

[project.scripts]
d_back = "d_back.server:main_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "d_back/__init__.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--verbose",
    "-ra",  # show summary of all test results
    "--timeout=60",  # global timeout of 60 seconds per test
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: marks tests as async",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "timeout: marks tests that may need longer timeout",
    "installation: marks tests as installation tests (can be run separately with '-m installation')",
]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
timeout = 60
timeout_method = "thread"

[tool.bumpversion]
current_version = "0.0.18"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "setup.cfg"
search = "version = {current_version}"
replace = "version = {new_version}"

[[tool.bumpversion.files]]
filename = "d_back/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""